--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -197,6 +197,7 @@ form input[readonly]:focus {
   border: var(--border) !important;
 }
 form select {
+  height: 50px;
   color: var(--text-color) !important;
   font-family: var(--text-font-family) !important;
   font-size: var(--text-font-size) !important;
@@ -1063,9 +1064,9 @@ form .form-error p {
   text-decoration: none;
   transition: ease 0.3s;
 }
-#portal .statistics .statistic-box:hover {
+/* #portal .statistics .statistic-box:hover {
   background-color: #fff9f5;
-}
+} */
 #portal .statistics .statistic-title {
   color: var(--dark-text-color);
   font-family: var(--accent-font-family);
@@ -1077,9 +1078,9 @@ form .form-error p {
   gap: 0.7rem;
   transition: ease 0.3s;
 }
-#portal .statistics .statistic-box:hover .statistic-title {
+/* #portal .statistics .statistic-box:hover .statistic-title {
   color: var(--accent-color);
-}
+} */
 #portal .statistics .statistic-value {
   color: var(--primary-color);
   font-family: var(--accent-font-family);
@@ -1088,6 +1089,6 @@ form .form-error p {
   transition: ease 0.3s;
 }
 #portal .statistics .statistic-box:hover .statistic-value {
-  color: var(--accent-color);
+  /* color: var(--accent-color); */
   font-size: 4rem;
 }
