--- a/assets/css/admin-portal.css
+++ b/assets/css/admin-portal.css
@@ -82,30 +82,32 @@
   width: 7rem;
 }
 #adminTeacherManagement .list .status {
+  display: inline-block;
+  width: 8rem;
   padding: 0.5rem 1rem;
-  font-family: var(--text-font-family);
-  font-weight: var(--text-font-weight);
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
   font-size: 0.9rem;
   border-radius: 0.3rem;
   border: var(--border);
   text-transform: capitalize;
 }
-#adminTeacherManagement .list .status.approved {
+#adminTeacherManagement .list .status.approuvé {
   background-color: #8eb48618;
   color: #8eb486;
   border-color: #8eb486;
 }
-#adminTeacherManagement .list .status.in-review {
+#adminTeacherManagement .list .status.en-cours {
   background-color: #81bfda1e;
   color: #81bfda;
   border-color: #81bfda;
 }
-#adminTeacherManagement .list .status.on-hold {
+#adminTeacherManagement .list .status.en-révision {
   background-color: #f0bc7815;
   color: #f0bb78;
   border-color: #f0bb78;
 }
-#adminTeacherManagement .list .status.rejected {
+#adminTeacherManagement .list .status.rejeté {
   background-color: #ff748b21;
   color: #ff748b;
   border-color: #ff748b;
@@ -127,6 +129,120 @@
   background-color: #fff;
   border-color: var(--accent-color);
   color: var(--dark-text-color);
+}
+
+/* teacher details */
+#adminTeacherDetails .content-section {
+  flex-direction: row !important;
+  align-items: flex-start;
+}
+#adminTeacherDetails .content-section .right-content {
+  flex: 1.5;
+}
+#adminTeacherDetails .section {
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+#adminTeacherDetails .section.user-courses {
+  flex: 1.5;
+}
+#adminTeacherDetails .profile-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+#adminTeacherDetails .profile-top .status {
+  display: inline-block;
+  width: 8rem;
+  padding: 0.5rem 1rem;
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: 0.9rem;
+  border-radius: 0.3rem;
+  border: var(--border);
+  text-transform: capitalize;
+  text-align: center;
+}
+#adminTeacherDetails .profile-top .status.approuvé {
+  background-color: #8eb48618;
+  color: #8eb486;
+  border-color: #8eb486;
+}
+#adminTeacherDetails .profile-top .status.en-cours {
+  background-color: #81bfda1e;
+  color: #81bfda;
+  border-color: #81bfda;
+}
+#adminTeacherDetails .profile-top .status.en-révision {
+  background-color: #f0bc7815;
+  color: #f0bb78;
+  border-color: #f0bb78;
+}
+#adminTeacherDetails .profile-top .status.rejeté {
+  background-color: #ff748b21;
+  color: #ff748b;
+  border-color: #ff748b;
+}
+#adminTeacherDetails .profile-image {
+  width: 100%;
+  max-width: 10rem;
+  max-height: 10rem;
+  border: var(--border);
+  border-radius: 0.5rem;
+}
+#adminTeacherDetails .profile-name {
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--secondary-font-size);
+  color: var(--accent-color);
+}
+#adminTeacherDetails .profile-username {
+  font-family: var(--text-font-family);
+  font-weight: var(--text-font-weight);
+  font-size: var(--text-font-size);
+  color: var(--text-color);
+}
+#adminTeacherDetails .detail-row {
+  padding: 1rem 0;
+  border-bottom: var(--border);
+}
+#adminTeacherDetails .detail-row:last-of-type {
+  border: none;
+}
+#adminTeacherDetails .detail-label {
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-font-size);
+  color: var(--dark-text-color);
+  text-transform: capitalize;
+}
+#adminTeacherDetails .detail-value {
+  flex: 2;
+  font-family: var(--text-font-family);
+  font-weight: var(--text-font-weight);
+  font-size: var(--text-font-size);
+  color: var(--text-color);
+}
+#adminTeacherDetails .table {
+  width: 100%;
+}
+#adminTeacherDetails .table th,
+#adminTeacherDetails .table td {
+  padding: 1rem;
+}
+#adminTeacherDetails .table th:first-of-type,
+#adminTeacherDetails .table td:first-of-type {
+  text-align: left;
+}
+#adminTeacherDetails .table th:last-of-type,
+#adminTeacherDetails .table td:last-of-type {
+  width: 5rem;
+}
+#adminTeacherDetails .table .invoice {
+  color: var(--accent-color);
 }
 
 /* student management */
