--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
  Theme URI:    
  Author:       Towfique Elahe
  Author URI:   https://towfique-elahe.framer.website/
- Description:  A custom WordPress theme for Joomana compatible with Elementor.
- Version:      2.1.9
+ Description:  A custom WordPress theme for Joomana compatible with Elementor and WooCommerce.
+ Version:      3.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  joomana
