--- a/assets/css/course-portal.css
+++ b/assets/css/course-portal.css
@@ -227,6 +227,129 @@
   color: var(--text-color);
 }
 
+/* resources page */
+#courseResources .button.add-resource {
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  text-transform: capitalize;
+  border: var(--border);
+  background-color: var(--accent-color);
+  color: #fff;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-font-size);
+  opacity: 0.8;
+  transition: ease 0.3s;
+}
+#courseResources .button.add-resource:hover {
+  opacity: 1;
+}
+#courseResources .file-container {
+  align-items: flex-start;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+}
+#courseResources .file-card {
+  width: calc((100% / 4) - 0.54rem);
+  border: var(--border);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+#courseResources .file-top {
+  position: relative;
+  width: 100%;
+  background-color: rgb(236, 236, 236);
+}
+#courseResources .file-icon {
+  font-size: 5rem;
+  text-align: center;
+  padding: 4rem 1rem 1rem 1rem;
+  opacity: 0.2;
+}
+#courseResources .file-type {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  z-index: 1;
+  padding: 0.3rem 0.5rem;
+  border: var(--border);
+  border-radius: 0.3rem;
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: 0.8rem;
+  text-transform: capitalize;
+}
+#courseResources .file-type.assignment {
+  background-color: rgb(255, 224, 230);
+  color: crimson;
+  border-color: crimson;
+}
+#courseResources .file-type.report {
+  background-color: rgb(255, 237, 231);
+  color: orangered;
+  border-color: orangered;
+}
+#courseResources .file-type.slide {
+  background-color: rgb(228, 252, 252);
+  color: darkcyan;
+  border-color: darkcyan;
+}
+#courseResources .file-delete {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  color: crimson;
+  font-size: 1.5rem;
+  opacity: 0.7;
+  transition: ease 0.3s;
+}
+#courseResources .file-delete:hover {
+  opacity: 1;
+}
+#courseResources .file-bottom {
+  width: 100%;
+  background-color: var(--gray-background-color);
+  padding: 1rem;
+}
+#courseResources .file-bottom .col {
+  flex: content;
+  justify-content: center;
+}
+#courseResources .file-title {
+  color: var(--dark-text-color);
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-font-size);
+}
+#courseResources .file-uploaded-time {
+  color: var(--text-color);
+  font-family: var(--text-font-family);
+  font-weight: var(--text-font-weight);
+  font-size: 0.8rem;
+}
+#courseResources .download-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  opacity: 0.7;
+  transition: ease 0.3s;
+}
+#courseResources .download-button:hover {
+  opacity: 1;
+}
+
 /* communication page */
 #courseCommunication .chat-container {
   gap: 2rem;
