--- a/assets/css/course-portal.css
+++ b/assets/css/course-portal.css
@@ -514,6 +514,105 @@
   font-size: var(--text-font-size);
   font-weight: var(--text-font-weight);
 }
+#courseSubmissions .file-container {
+  align-items: flex-start;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+}
+#courseSubmissions .file-card {
+  width: calc((100% / 4) - 0.54rem);
+  border: var(--border);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+#courseSubmissions .file-top {
+  position: relative;
+  width: 100%;
+  background-color: rgb(236, 236, 236);
+}
+#courseSubmissions .file-icon {
+  font-size: 5rem;
+  text-align: center;
+  padding: 4rem 1rem 1rem 1rem;
+  opacity: 0.2;
+}
+#courseSubmissions .file-type {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  z-index: 1;
+  padding: 0.3rem 0.5rem;
+  border: var(--border);
+  border-radius: 0.3rem;
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: 0.8rem;
+  text-transform: capitalize;
+}
+#courseSubmissions .file-type.assignment {
+  background-color: rgb(255, 224, 230);
+  color: crimson;
+  border-color: crimson;
+}
+#courseSubmissions .file-type.report {
+  background-color: rgb(255, 237, 231);
+  color: orangered;
+  border-color: orangered;
+}
+#courseSubmissions .file-type.slide {
+  background-color: rgb(228, 252, 252);
+  color: darkcyan;
+  border-color: darkcyan;
+}
+#courseSubmissions .file-delete {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  color: crimson;
+  font-size: 1.5rem;
+  opacity: 0.7;
+  transition: ease 0.3s;
+}
+#courseSubmissions .file-delete:hover {
+  opacity: 1;
+}
+#courseSubmissions .file-bottom {
+  width: 100%;
+  background-color: var(--gray-background-color);
+  padding: 1rem;
+}
+#courseSubmissions .file-bottom .col {
+  flex: content;
+  justify-content: center;
+}
+#courseSubmissions .file-title {
+  color: var(--dark-text-color);
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-font-size);
+}
+#courseSubmissions .file-uploaded-time {
+  color: var(--text-color);
+  font-family: var(--text-font-family);
+  font-weight: var(--text-font-weight);
+  font-size: 0.8rem;
+}
+#courseSubmissions .download-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  opacity: 0.7;
+  transition: ease 0.3s;
+}
+#courseSubmissions .download-button:hover {
+  opacity: 1;
+}
 
 /* communication page */
 #courseCommunication .chat-container {
